(自分にとっては)新しいJavaの機能(ローカル変数の型推論)をMission2使ってみる pomのjava.versionをJava17に更新 056277f0e721855c846c2255267b41936293e24f で発生したムシの悲しみを緩和
Signed-off-by: yahho <minecraftgasukinafumi@gmail.com>